--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Covid-19</title>
+    <title>COVID</title>
   </head>
+  <script src="main.js">
+  </script>
   <body>
 
     <form  action="/" method="post">
